2009-10-14  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-note.c (hd_note_init): Add portrait non-comp. mode to the
	check.
	* src/mb/hd-note.c (hd_note_request_geometry): Add portrait non-comp.
	mode to the check.

	Release 2.2.104-1

2009-10-13  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#129810 - Home shortcuts backedup in one home view are
	restored in another view in a scenario

	* src/hildon-desktop-post-backup.sh:
	* src/Makefile.am: Add post backup script to remove temporary files.

	* src/hildon-desktop-restore.sh:
	* src/hildon-desktop.conf:
	* src/hildon-desktop.prebackup.sh: Fix case if default shortcuts are
	backed up.

2009-10-13  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hildon-desktop-restore.sh: Fix restore script. Restart
	hildon-home.

	* src/home/hd-home.c (hd_home_add_applet): Empty GConfClient cache to
	make sure no old values are read.

2009-10-13  Jan Arne Petersen  <jpetersen@openismus.com>

	Make sure home.plugins is restored after GConf values are restored.

	Fixes: NB#129810 - Home shortcuts backedup in one home view are
	restored in another view in a scenario

	* src/hildon-desktop-restore.sh: Restore home.plugins-backup to
	home.plugins

	* src/hildon-desktop.conf: Backup home.plugins-backup

	* src/hildon-desktop.prebackup.sh: Copy home.plugins to
	home.plugins-backup.

	* src/Makefile.am: Add new restore script.

2009-10-13  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes NB#141441 - Screenshot texture re-allocated on rotation
	Note: requires clutter 0.8.2-0maemo54
	
	* src/tidy/tidy-cached-group.c: Use similar idea to tidy-blur-group,
	  where we keep the texture allocated at 800x480, but just rotate
	  it by 90 degrees if we have to.
	* debian/control: Depend on clutter 0.8.2-0maemo54

2009-10-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Don't process key presses when showing loading screen.
	Fixes: NB#141019

	* src/home/hd-render-manager.h:
